# BackpropFramework

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  codecov.yml
Operations/: Addition.cpp  Addition.h  Input.h  Node.h
spike/: CMakeLists.txt  Main.cpp  TestNode.h  TestOp.cpp  TestOp.h
src/: Evaluator.cpp  Evaluator.h  Main.cpp
src/Core/: Channel.cpp  Channel.h  Differentiable.h  ExecutionContext.cpp  ExecutionContext.h  ForwardExecutionContext.cpp  ForwardExecutionContext.h  IChannelProvider.h  IDifferentiableExecutor.h  IExecutionContext.h  IExecutor.h  Node.cpp  Node.h  NodeFacade.cpp  NodeFacade.h  Operation.h  Parameterized.h
src/Data/: Datatypes.cpp  Datatypes.h  IInitializer.h
src/Data/Initializers/: Constant.cpp  Constant.h  Ones.cpp  Ones.h  Zeros.cpp  Zeros.h
src/Evaluation/: BackwardEvaluator.cpp  BackwardEvaluator.h  Evaluator.cpp  Evaluator.h  ForwardEvaluator.cpp  ForwardEvaluator.h  IEvaluator.h  LazyEvaluator.cpp  LazyEvaluator.h  LegacyEvaluator.cpp  LegacyEvaluator.h  Utils.cpp  Utils.h
src/Main/: Main.cpp
src/Operations/: Addition.cpp  Addition.h  Arithmetic.h  Constant.cpp  Constant.h  Differentiable.h  Division.cpp  Division.h  IDifferentiable.h  Input.cpp  Input.h  Multiplication.cpp  Multiplication.h  Node.cpp  Node.h  Operation.cpp  Operation.h  Subtraction.cpp  Subtraction.h  Value.h
src/Operations/Arithmetic/: Addition.cpp  Addition.h  Division.cpp  Division.h  Multiplication.cpp  Multiplication.h  Subtraction.cpp  Subtraction.h
src/Operations/Base/: Channel.cpp  Constant.cpp  Constant.h  Differentiable.h  IChannelProvider.h  IDifferentiableExecutor.h  IExecutor.h  Input.cpp  Input.h  Node.cpp  Node.h  Operation.h  Parameterized.h  Variable.cpp  Variable.h
src/Operations/Value/: Constant.cpp  Constant.h  Input.cpp  Input.h  Variable.cpp  Variable.h
src/Optimizers/: GradientDescentOptimizer.cpp  GradientDescentOptimizer.h  IOptimizer.h
src/Utils/: Datatypes.cpp  Datatypes.h  Dictionary.h  Hash.h
test/: CMakeLists.txt
test/TestCore/: CMakeLists.txt  FakeNonDifferentiableConstant.cpp  FakeNonDifferentiableConstant.h  Main.cpp  TestCore.h  TestDifferentiability.cpp
test/TestData/: CMakeLists.txt  Main.cpp  TestData.cpp  TestData.h  TestInitializers.cpp
test/TestEvaluation/: CMakeLists.txt  FakeForwardEvaluationCounter.cpp  FakeForwardEvaluationCounter.h  FakeMultichannelNode.cpp  FakeMultichannelNode.h  Main.cpp  TestBackpropagation.cpp  TestEvaluation.h  TestForwardPropagation.cpp  TestMultichannelEvaluation.cpp  TestMultipleEvaluation.cpp  TestRepeatedEvaluation.cpp
test/TestOperations/: CMakeLists.txt  TestBasicOperations.cpp  TestNoopNodes.cpp  TestOperations.cpp  TestOperations.h
